--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   provider: ^6.1.2
+  firebase_core: ^3.12.0
+  firebase_auth: ^5.5.0
 
 dev_dependencies:
   flutter_test:
